--- a/Rogue/string_permutation/string_permutation.cbp
+++ b/Rogue/string_permutation/string_permutation.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Sum of subset" />
+		<Option title="string_permutation" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Sum of subset" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/string_permutation" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Sum of subset" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/string_permutation" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -34,8 +34,8 @@
 		</Compiler>
 		<Unit filename="main.cpp" />
 		<Extensions>
-			<code_completion />
 			<envvars />
+			<code_completion />
 			<debugger />
 		</Extensions>
 	</Project>
