--- a/Rogue/sum_of_subset/sum_of_subset.cbp
+++ b/Rogue/sum_of_subset/sum_of_subset.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="String Permutation" />
+		<Option title="sum_of_subset" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/String Permutation" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/sum_of_subset" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/String Permutation" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/sum_of_subset" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -34,8 +34,9 @@
 		</Compiler>
 		<Unit filename="main.cpp" />
 		<Extensions>
-			<code_completion />
 			<envvars />
+			<code_completion />
+			<lib_finder disable_auto="1" />
 			<debugger />
 		</Extensions>
 	</Project>
